--- a/css/styles.css
+++ b/css/styles.css
@@ -18,16 +18,17 @@ body {
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
-    padding: 16px 12em;
+    padding: 1em 15em;
     align-items: center;
 }
 
 .header-logo {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 800;
 }
 
-.right-links {
+.right-links,
+.secondary-text {
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -43,4 +44,53 @@ ul {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.hero-main-container {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 5em 15em;
+}
+
+.hero-left-container {
+    flex-wrap: wrap;
+    padding: 0 5em;
+}
+
+.hero-right-container {
+    flex-wrap: nowrap;
+}
+
+.main-text {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: bolder;
+    margin-bottom: 0.1em;
+}
+
+.secondary-text {
+    margin-bottom: 1em;
+}
+
+.btn-sign-up {
+    height: 2.3em;
+    width: 8em;
+    border: none;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.placeholder-image {
+    background-color: #6d747d;
+    width: 500px;
+    height: 240px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
