--- a/css/styles.css
+++ b/css/styles.css
@@ -168,8 +168,7 @@ a {
     align-items: center;
     width: 70%;
     height: 9em;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 4em auto;
     border-radius: 8px;
 }
 
@@ -185,4 +184,18 @@ a {
 
 .cta-button {
     border: white solid;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0;
+    margin-top: 4em;
+}
+
+.footer-text {
+    font-size: 18px;
 }
